@@ -123,8 +123,11 @@ IN DEVELOPMENT
    * ``bzr --version`` takes care about encoding of stdout, especially
      when output is redirected. (Alexander Belchenko, #131100)
 
-    * Prompt for an ftp password if none is provided.
-      (Vincent Ladeuil, #137044)
+   * Prompt for an ftp password if none is provided.
+     (Vincent Ladeuil, #137044)
+
+   * ``bzr selftest --benchmark`` is now verbose by default again. To
+     disable verbose mode, use ``--quiet`` or ``-q``. (Ian Clatworthy)
 
   IMPROVEMENTS:
 
